# vikunja-mcp-deploy

./: .gitignore  README.md  pyproject.toml  render.yaml
src/vikunja_mcp/: server.py
